--- a/themes/geogoe/.babelrc
+++ b/themes/geogoe/.babelrc
@@ -2,6 +2,15 @@
     "presets": [
         "@babel/preset-env",
         "@babel/preset-flow",
-        "@babel/preset-react"
-    ]
+        ["@babel/preset-react", { "runtime": "automatic" }]
+    ],
+    "plugins": [
+        [
+          "@babel/plugin-transform-react-jsx",
+          {
+            "runtime": "automatic",
+            "importSource": "preact"
+          }
+        ]
+      ]
 }
