--- a/themes/geogoe/package.json
+++ b/themes/geogoe/package.json
@@ -33,7 +33,15 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.7.1",
+    "preact": "^10.19.2",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat"
+  },
+  "alias": {
+    "react": "preact/compat",
+    "react-dom/test-utils": "preact/test-utils",
+    "react-dom": "preact/compat",
+    "react/jsx-runtime": "preact/jsx-runtime"
   }
 }
