Change app structure to can build blueprintjs

--- a/themes/geogoe/package.json
+++ b/themes/geogoe/package.json
@@ -34,14 +34,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.7.1",
-    "preact": "^10.19.2",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat"
-  },
-  "alias": {
-    "react": "preact/compat",
-    "react-dom/test-utils": "preact/test-utils",
-    "react-dom": "preact/compat",
-    "react/jsx-runtime": "preact/jsx-runtime"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
