--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "router",
         "psr7"
     ],
+    "minimum-stability": "dev",
     "homepage": "http://github.com/slimphp/Slim-Skeleton",
     "license": "MIT",
     "authors": [
@@ -30,6 +31,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
+        "jackal-cms/framework": "dev-master",
         "davedevelopment/phpmig": "^1.7",
         "laravel/serializable-closure": "^1.3",
         "marcj/topsort": "^2.0",
