--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "jangregor/phpstan-prophecy": "^1.0.0",
         "phpspec/prophecy-phpunit": "^2.1",
         "phpstan/extension-installer": "^1.3.1",
-        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan": "1.10.62",
         "phpunit/phpunit": "^9.6.17",
         "squizlabs/php_codesniffer": "^3.9"
     },
