Move some package to framework

--- a/composer.json
+++ b/composer.json
@@ -29,21 +29,11 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "ext-json": "*",
         "davedevelopment/phpmig": "^1.7",
-        "quagga/framework": "dev-master",
+        "quagga/framework": "*",
         "laravel/serializable-closure": "^1.3",
-        "marcj/topsort": "^2.0",
-        "monolog/monolog": "^2.x-dev",
-        "opis/orm": "^1.0",
-        "php-di/php-di": "^7.0",
-        "phpseclib/phpseclib": "^3.0",
         "polarising/bcrypt": "^1.0",
         "ramsey/uuid": "^4.2.3",
-        "slim/console": "^0.1.0",
-        "slim/psr7": "^1.6",
-        "slim/slim": "^4.13",
         "slim/twig-view": "^3.3",
         "spatie/schema-org": "^3.9",
         "tebazil/db-seeder": "^1.0",
