--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
     ],
     "require": {
         "davedevelopment/phpmig": "^1.7",
-        "quagga/framework": "*",
         "laravel/serializable-closure": "^1.3",
         "polarising/bcrypt": "^1.0",
+        "quagga/framework": "dev-master",
         "ramsey/uuid": "^4.2.3",
         "slim/twig-view": "^3.3",
         "spatie/schema-org": "^3.9",
