Change twig view package

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "laravel/serializable-closure": "^1.3",
         "polarising/bcrypt": "^1.0",
         "quagga/framework": "dev-master",
+        "quagga/twig-view": "^3.3",
         "ramsey/uuid": "^4.2.3",
-        "slim/twig-view": "^3.3",
         "spatie/schema-org": "^3.9",
         "tebazil/db-seeder": "^1.0",
         "tightenco/collect": "^8.83.27",
